more readme formatting

--- a/README.Rmd
+++ b/README.Rmd
@@ -8,18 +8,13 @@ output: rmarkdown::github_document
 ## The following libraries are used in the project
 
 ```{r eval=FALSE}
-library(shiny)
-library(caret)
-library(tidyverse)
-library(DT)
-library(plotly)
-library(shinycssloaders)
+install.packages(c("shiny", "caret", "tidyverse", "DT", "plotly", "shinycssloaders"))
 ```
 
 
 ## The following command is what is used to run the file
 
 ```{r eval=FALSE}
-runGitHub("st558-project3", "sdu-ncsu")
+shiny::runGitHub("st558-project3", "sdu-ncsu")
 ```
 
